# Establo

./: README.md  package-lock.json  package.json
backend/: Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  FRONTEND_INTEGRATION.md  README.md  build-anchor.sh  build-with-anchor.bat  setup_wsl.sh
backend/docs/: integration.md
backend/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  rwa_marketplace.rs
backend/tests/: rwa-marketplace-integration.js  rwa_marketplace.rs  stablecoin.rs
frontend/: .gitignore  README.md  package-lock.json  package.json  restart-ts.js  tailwind.config.js  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/burn/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/learn/: page.tsx
frontend/app/mint/: page.tsx
frontend/app/rwa-marketplace/: page.tsx
frontend/app/swap/: page.tsx
frontend/app/transfer/: page.tsx
frontend/app/wallet/: page.tsx
frontend/components/: DaoImpactCard.tsx
frontend/components/layout/: Footer.tsx  Header.tsx
frontend/lib/: constants.ts  store.ts
frontend/types/: radix-ui.d.ts  react.d.ts  solana-adapter.d.ts  solana-spl-token.d.ts  solana-web3.d.ts  solana.d.ts  ui.d.ts
public/Images/: index.js
src/: lib.rs  marketplace.js  marketplace.json  new4_program-keypair.json  new_program-keypair.json  rwa_marketplace.rs  stablecoin.rs
src/app/: globals.css  page.js
src/components/: CustomButton.js  StatCards.js  heroSection.js  navbar.js
src/data/: data.json
src/src/: lib.rs
src/src/contexts/: purchase.rs
src/theme/: index.jsx
(+17 files in other folders)
